# ranobelib-epub

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: OPERATOR_WORKFLOW.md  VPS_OPERATOR_RUNBOOK.md  VPS_SYSTEMD_8080.md
src/ranobelib_epub/: __init__.py  app.py  build.py  chapter_client.py  content.py  display_numbering.py  epub.py  images.py  inventory.py  jobs.py  ranobelib.py  title_detail.py
tests/: test_app.py  test_build.py  test_chapter_client.py  test_chapter_normalizer.py  test_epub.py  test_inventory.py  test_jobs.py  test_ranobelib.py
