[project]
name = "ranobelib-epub"
version = "0.1.0"
description = "Lightweight DB-less RanobeLib EPUB builder"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "httpx",
    "EbookLib",
    "beautifulsoup4",
    "lxml",
    "Pillow",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
